force-app/main/default/objects/ActivityRequiredDocument__mdt/ActivityRequiredDocument__mdt.object-meta.xml
<CustomObject>
    <description>Documentos obrigatórios por atividade.</description>
    <label>Documento por Atividade</label>
    <pluralLabel>Documentos por Atividade</pluralLabel>
</CustomObject>