force-app/main/default/objects/ActivityRequiredDocument__mdt/fields/ActivitySubject__c.field-meta.xml
<CustomField>
    <fullName>ActivitySubject__c</fullName>
    <description>Assunto da atividade (Subject) para a qual os documentos são exigidos.</description>
    <label>Assunto da Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>