force-app/main/default/objects/ActivityRequiredDocument__mdt/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Observações adicionais sobre os documentos.</description>
    <label>Observação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>