force-app/main/default/objects/ActivityRequiredDocument__mdt/fields/RequiredFiles__c.field-meta.xml
<CustomField>
    <fullName>RequiredFiles__c</fullName>
    <description>Lista de arquivos obrigatórios (separados por ponto e vírgula).</description>
    <label>Arquivos Obrigatórios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>